package W02.task3;

public abstract class Item {
    protected String color;

    public abstract int getRank();

}
