package W02.task3;

public interface Sorter {

    public void loadData(int[][] items);

    public void sort();

    public String[] getProcess();

}